# RandonautAndroid

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Steve.cpp
app/src/main/jni/: Steve.cpp  keys.c
app/src/main/res/drawable/: background_splash.xml  baseline_help_outline_24.xml  drawer_list_selector.xml  main_header_selector.xml  main_header_selector_night.xml  navigation_button.xml  outline_close_24.xml  side_nav_bar.xml
app/src/main/res/layout/: activity_main.xml  dialog_camrng.xml  dialog_crowdfunding.xml  dialog_explanation.xml  dialog_intentinput.xml  dialog_loading.xml  dialog_preferences.xml  dialog_privacy.xml  dialog_qeustionreportwindow.xml  dialog_questionreport.xml  dialog_report.xml  dialog_reportold.xml  dialog_rngexplanation.xml  dialog_rngpreferences.xml  dialog_setinention.xml  dialog_showonmap.xml  dialog_temporal.xml  dialog_temporalexplanation.xml  dialog_textinput.xml  fragment_list_anomalies.xml  fragment_list_attractors.xml  fragment_list_voids.xml  fragment_my_bot.xml  fragment_profile.xml  fragment_randonaut.xml  fragment_randonautica.xml  fragment_upgrade.xml  fragment_view.xml  my_attractors_list_item.xml  my_attractors_list_item_test.xml  nav_header_main.xml  rv_on_top_of_map_card.xml  test.xml
app/src/main/res/menu/: activity_main_drawer.xml  drawer_menu.xml
app/src/main/res/raw/: term.txt
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
(+98 files in other folders)
